[gd_scene load_steps=7 format=3 uid="uid://d3xqpiwtfotnp"]

[ext_resource type="Script" uid="uid://dblhtg4d2dii1" path="res://scripts/falling_plataform.gd" id="1_xgh3p"]
[ext_resource type="Texture2D" uid="uid://dgplpie47v5pj" path="res://assets/sprites/Sprites blocos/falling-platform-brown.png" id="2_xgh3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3n01i"]
size = Vector2(31, 15)

[sub_resource type="Animation" id="Animation_3n01i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xgh3p"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4u7ic"]
_data = {
&"RESET": SubResource("Animation_3n01i"),
&"shake": SubResource("Animation_xgh3p")
}

[node name="falling-plataform" type="AnimatableBody2D"]
collision_layer = 4
script = ExtResource("1_xgh3p")
reset_timer = 2.0

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("2_xgh3p")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3n01i")
one_way_collision = true

[node name="respawn_timer" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4u7ic")
}

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
